--- a/tags.html
+++ b/tags.html
@@ -46,12 +46,12 @@ Here we generate all the tags.
   {% for post in site.posts %}
   {% if post.tags contains tag %}
   <li>
-    <h3>
+    <h3 style="display:inline">
       <a href="{{ post.url }}">
         {{ post.title }}
         <small>{{ post.date | date_to_string }}</small>
       </a>
-      </h3>&#8209;
+      </h3>
       {% for tag in post.tags %}
       <a class="tag-mark" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
