--- a/tags.html
+++ b/tags.html
@@ -47,7 +47,7 @@ Here we generate all the tags.
   {% if post.tags contains tag %}
   <li>
     <h3 style="display:inline">
-      <a href="{{ post.url }}">
+      <a style="text-transform: capitalize" href="{{ post.url }}">
         {{ post.title }}
         <small>{{ post.date | date_to_string }}</small>
       </a>
