--- a/tags.html
+++ b/tags.html
@@ -41,13 +41,13 @@ Here we generate all the tags.
 {% endfor %}
 
 {% for tag in tags %}
-<h2 id="{{ tag | slugify }}">{{ tag }}</h2>
+<h2 style="text-transform: capitalize" id="{{ tag | slugify }}">{{ tag }}</h2>
 <ul class="category-list">
   {% for post in site.posts %}
   {% if post.tags contains tag %}
   <li>
     <h3 style="display:inline">
-      <a style="text-transform: capitalize" href="{{ post.url }}">
+      <a href="{{ post.url }}">
         {{ post.title }}
         <small>{{ post.date | date_to_string }}</small>
       </a>
