--- a/tags.html
+++ b/tags.html
@@ -53,7 +53,7 @@ Here we generate all the tags.
       </a>
       </h3>
       {% for tag in post.tags %}
-      <a class="tag-mark" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
+      <a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
     
   </li>
