--- a/tags.html
+++ b/tags.html
@@ -41,8 +41,8 @@ Here we generate all the tags.
 {% endfor %}
 
 {% for tag in tags %}
-<h2 style="color: #d33682; text-transform: capitalize" id="{{ tag | slugify }}">{{ tag }}</h2>
-<ul class="category-list">
+<h2 class="tag-header" id="{{ tag | slugify }}">{{ tag }}</h2>
+<ul class="tag-posts">
   {% for post in site.posts %}
   {% if post.tags contains tag %}
   <li>
