--- a/tags.html
+++ b/tags.html
@@ -35,7 +35,7 @@ title:    Tags
 <p>
 <div class="top-tagmarks">
 {% for tag in tags %}
-<a href="#{{ tag | slugify }}" class="tag-mark"> {{ tag }} </a> &nbsp;&nbsp;
+<a href="#{{ tag | slugify }}" class="tag-mark"> {{ tag }} </a>
 {% endfor %}
 </div>
 
