--- a/tags.html
+++ b/tags.html
@@ -32,10 +32,9 @@ title:    Tags
 <br/>
 
 <div class="posts">
-<p>
 <div class="top-tagmarks">
 {% for tag in tags %}
-<a href="#{{ tag | slugify }}" class="tag-mark"> {{ tag }} </a>
+<a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
 {% endfor %}
 </div>
 
