--- a/tags.html
+++ b/tags.html
@@ -32,11 +32,11 @@ title:    Tags
 <br/>
 
 <div class="posts">
-
+<div class="top-tagmarks">
 {% for tag in tags %}
 <a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
 {% endfor %}
-
+  </div>
 {% for tag in tags %}
 <h2 class="tag-header" id="{{ tag | slugify }}">{{ tag }}</h2>
 <ul class="tag-posts">
