--- a/tags.html
+++ b/tags.html
@@ -34,7 +34,7 @@ title:    Tags
 <div class="posts">
 <div class="top-tagmarks">
 {% for tag in tags %}
-<a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
+<a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a> | 
 {% endfor %}
   </div>
 {% for tag in tags %}
