--- a/tags.html
+++ b/tags.html
@@ -32,9 +32,9 @@ title:    Tags
 <br/>
 
 <div class="posts">
-<div class="top-tagmarks">| 
+<div class="top-tagmarks"> 
 {% for tag in tags %}
-<a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a> | 
+<a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
 {% endfor %}
   </div>
 {% for tag in tags %}
