--- a/tags.html
+++ b/tags.html
@@ -49,7 +49,7 @@ title:    Tags
         <small>{{ post.date | date_to_string }}</small>
       </a>
       </h3>
-      <ul><li>   
+      <ul class='tag-posts'><li>   
       {% for tag in post.tags %}
       <a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
