--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title:    Home
       </h3>
       <ul class='tag-posts'><li>   
       {% for tag in post.tags %}
-      <a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
+      <a class="tag-mark" href="{{ site.tag_page }}#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
         </li></ul>
   </li>
