--- a/tags.html
+++ b/tags.html
@@ -45,10 +45,9 @@ title:    Tags
   <li>
     <h3>
       <a href="{{ post.url }}">
-        {{ post.title }}
-        <small>{{ post.date | date_to_string }}</small>
-      </a>
+        {{ post.title }}</a>
       </h3>
+      <small>{{ post.date | date_to_string }}</small>
       <ul class='tag-posts'><li>   
       {% for tag in post.tags %}
       <a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
