--- a/tags.html
+++ b/tags.html
@@ -44,11 +44,8 @@ title:    Tags
   {% if post.tags contains tag %}
   <li>
     <h3>
-      <a href="{{ post.url }}">
-        {{ post.title }}</a>
+            <small>{{ post.date | date_to_string }}</small> <a href="{{ post.url }}">{{ post.title }}</a>
       </h3>
-    <br>
-      <small>{{ post.date | date_to_string }}</small>
       <ul class='tag-posts'><li>   
       {% for tag in post.tags %}
       <a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
