--- a/tags.html
+++ b/tags.html
@@ -46,7 +46,7 @@ title:    Tags
     <h3>
             <small>{{ post.date | date_to_string }}</small> <a href="{{ post.url }}">{{ post.title }}</a>
       </h3>
-      <ul class='tag-posts'><li>   
+      <ul class='tagsunderpost'><li>   
       {% for tag in post.tags %}
       <a class="tag-mark" href="#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
