--- a/index.html
+++ b/index.html
@@ -37,12 +37,9 @@ title:    Home
   {% for post in site.posts %}
   <li>
     <h3>
-      <a href="{{ post.url }}">
-        {{ post.title }}
-        <small>{{ post.date | date_to_string }}</small>
-      </a>
+      <small>{{ post.date | date_to_string }}</small> <a href="{{ post.url }}">{{ post.title }}</a>
       </h3>
-      <ul class='tag-posts'><li>   
+      <ul class='tagsunderpost'><li>   
       {% for tag in post.tags %}
       <a class="tag-mark" href="{{ site.tag_page }}#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
