--- a/tags.html
+++ b/tags.html
@@ -27,7 +27,7 @@ title:    Tags
 {% endfor %}
 
 <h1 class="page-title">
-  <a href="/">Blog</a> | {{ page.title }}
+  {{ page.title }}
 </h1>
 <br/>
 
