--- a/tags.html
+++ b/tags.html
@@ -44,7 +44,7 @@ title:    Tags
   {% if post.tags contains tag %}
   <li>
     <h3>
-            <small>{{ post.date | date_to_string }}</small> <a href="{{ post.url }}">{{ post.title }}</a>
+            <small>{{ post.date | "%b %Y" }}</small> <a href="{{ post.url }}">{{ post.title }}</a>
       </h3>
     <!--
       <ul class='tagsunderpost'><li>   
