--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title:    Home
   {% for post in site.posts %}
   <li>
     <h3>
-      <small>{{ post.date | date: "%b %Y"}}</small> <a href="{{ post.url }}">{{ post.title }}</a>
+      <small>{{ post.date | date: "%b %y"}}</small> <a href="{{ post.url }}">{{ post.title }}</a>
       </h3>
     <!--
     <ul class='tagsunderpost'><li>   
