--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout:   default
+title:    Home
+---
 {% assign rawtags = "" %}
 {% for post in site.posts %}
 {% assign ttags = post.tags | join:'|' | append:'|' %}
