--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
-layout:   default
+layout:   page
 title:    Home
 ---
+
+
 {% assign rawtags = "" %}
 {% for post in site.posts %}
 {% assign ttags = post.tags | join:'|' | append:'|' %}
@@ -29,10 +31,24 @@ title:    Home
   Latest
 </h1>
 <br/>
+
+<div class="posts">
+<ul class="tag-posts">
   {% for post in site.posts %}
-<li>
+  <li>
+    <h3>
       <small>{{ post.date | date: "%m%y"}}</small> <a href="{{ post.url }}">{{ post.title }}</a>
-</li>
+      </h3>
+    <!--
+    <ul class='tagsunderpost'><li>   
+      {% for tag in post.tags %}
+      <a class="tag-mark" href="{{ site.tag_page }}#{{ tag | slugify }}">{{ tag }}</a>
+      {% endfor %}
+        </li></ul>
+  </li>
+-->
     {% endfor %}
 
+</ul>
 
+</div>
